[CXF-7725]ensure all tests on 3.2.x branch can pass with java10